Updating order service to use local database table with cqrs pattern